<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".level1.TriviaGameEndActivity">

    <TextView
        android:id="@+id/gameOverText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="#F44336"
        android:foregroundTint="#00130C0C"
        android:outlineAmbientShadowColor="#00CE3535"
        android:shadowColor="#00201D1D"
        android:text="@string/triviaGameOver"
        android:textAllCaps="true"
        android:textColor="#DF1111"
        android:textColorHint="#F44336"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/finalPointsText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/nextLevel"
        android:layout_width="108dp"
        android:layout_height="56dp"
        android:layout_marginBottom="69dp"
        android:background="#FF9800"
        android:onClick="goToNextLevel"
        android:text="@string/nextLevel2"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/quitButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.452"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playAgain" />

    <Button
        android:id="@+id/playAgain"
        android:layout_width="108dp"
        android:layout_height="56dp"
        android:layout_marginStart="129dp"
        android:layout_marginTop="51dp"
        android:layout_marginEnd="156dp"
        android:layout_marginBottom="78dp"
        android:background="#FF5722"
        android:onClick="playAgain"
        android:text="@string/playAgain"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/nextLevel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/finalPointsText" />

    <Button
        android:id="@+id/quitButton"
        android:layout_width="108dp"
        android:layout_height="56dp"
        android:layout_marginBottom="169dp"
        android:background="#FFC107"
        android:onClick="quit"
        android:text="@string/quit"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.452"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nextLevel" />

    <TextView
        android:id="@+id/finalPointsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="97dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="67dp"
        android:text="@string/finalPointsText"
        android:textColor="#9C27B0"
        android:textSize="45sp"
        app:layout_constraintBottom_toTopOf="@+id/playAgain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameOverText" />

</androidx.constraintlayout.widget.ConstraintLayout>