<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".level1.TriviaGame"
    tools:showIn="@layout/main_trivia_game">

    <TextView
        android:id="@+id/numberOfPoints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/numberOfPoints"
        android:textColor="#9C27B0"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/countDownText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:layout_marginBottom="52dp"
        android:text="@string/countDownText"
        android:textColor="#3F51B5"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/question"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.402"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberOfPoints"
        app:layout_constraintVertical_bias="0.125" />

    <TextView
        android:id="@+id/question"
        android:layout_width="353dp"
        android:layout_height="113dp"
        android:layout_marginTop="136dp"
        android:text="@string/question"
        android:textAlignment="textStart"
        android:textColor="#F44336"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="352dp"
        android:layout_height="363dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.674"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question">


        <RadioButton
            android:id="@+id/questionOption1"
            android:layout_width="298dp"
            android:layout_height="73dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="76dp"
            android:buttonTint="#2196F3"
            android:checked="false"
            android:onClick="answerSelected"
            android:text="@string/questionOption1"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="30sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/questionOption2"
            android:layout_width="303dp"
            android:layout_height="66dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="76dp"
            android:buttonTint="#2196F3"
            android:onClick="answerSelected"
            android:text="@string/questionOption2"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/questionOption1" />

        <RadioButton
            android:id="@+id/questionOption3"
            android:layout_width="304dp"
            android:layout_height="69dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="69dp"
            android:buttonTint="#2196F3"
            android:onClick="answerSelected"
            android:text="@string/questionOption3"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/questionOption4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/questionOption2" />

        <RadioButton
            android:id="@+id/questionOption4"
            android:layout_width="304dp"
            android:layout_height="67dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="21dp"
            android:layout_marginEnd="67dp"
            android:buttonTint="#2196F3"
            android:onClick="answerSelected"
            android:text="@string/questionOption4"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/countDownText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/questionOption3" />

    </RadioGroup>

    <ImageView
        android:id="@+id/easterEgg"
        android:layout_width="56dp"
        android:layout_height="37dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="22dp"
        android:contentDescription="@string/easterEggDescription"
        android:onClick="goToHiddenActivity"
        app:layout_constraintBottom_toTopOf="@+id/countDownText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.99"
        app:layout_constraintStart_toEndOf="@+id/numberOfPoints"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/easteregg" />

</androidx.constraintlayout.widget.ConstraintLayout>